done with the banner image section

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@ body{
     padding: 20px 80px;
     background: #eaebe3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 #navbar{
@@ -107,4 +111,40 @@ and the effect that shows we're in a particular page
     position: absolute;
     bottom: -4px;
     left: 20px;
+}
+
+/* Done with the navigation: styling the home page */
+
+#hero{
+    background-image: url(../img/bannerBg2.jpg);
+    height: 90vh;
+    width: 100%;
+    background-position: top 25% right 0%;
+    background-size: cover;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+/* Adding some colors to our text on screen  */
+#hero h4{
+    padding-bottom: 15px;
+}
+
+#hero h1{
+    color: #088178;
+}
+
+#hero button{
+    background-image: url(../img/bannerButton.jpg);
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 14px 80px 14px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
 }
