--- a/css/styles.css
+++ b/css/styles.css
@@ -218,3 +218,27 @@ and the effect that shows we're in a particular page
     font-size: 1.0rem;
 }
 
+/* Styling the familar section  */
+
+#familiar{
+   margin-top:  10rem;
+}
+
+#familiar .col-md-6 h6{
+    font-weight: bolder;
+    font-size: 0.8rem;
+}
+
+#familiar h2{
+    font-weight: bolder;
+}
+
+#familiar .knowJay{
+    margin-top: 5rem;
+}
+
+
+#familiar .knowJay i{
+    color: #088178;
+    font-size: 1.2rem;
+}
