--- a/css/styles.css
+++ b/css/styles.css
@@ -229,16 +229,39 @@ and the effect that shows we're in a particular page
     font-size: 0.8rem;
 }
 
-#familiar h2{
+#familiar .col-md-6 h2{
     font-weight: bolder;
 }
 
-#familiar .knowJay{
+#familiar .col-md-6 .knowJay{
     margin-top: 5rem;
 }
 
-
-#familiar .knowJay i{
+#familiar .col-md-6 .knowJay i{
     color: #088178;
     font-size: 1.2rem;
+}
+
+/* Styling the experience section  */
+
+#experience{
+    margin-top: 10rem;
+}
+
+#experience .col-md-6 h6{
+    font-weight: bolder;
+    font-size: 0.8rem;
+}
+
+#experience .col-md-6 h2{
+    font-weight: bolder;
+}
+
+#experience .col-md-6 .jayWork{
+    margin-top: 3rem;
+}
+
+#experience .col-md-6 .jayWork h4{
+    font-weight: bolder;
+    
 }
