--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: 'Lato', sans-serif;
     padding: 0;
     margin: 0;
@@ -21,49 +21,54 @@
     by doing this we are saving time and not having
     to write the same styling over and over again
 */
-h1{
+
+html {
+    font-size: 82%;
+}
+
+h1 {
     font-size: 50px;
     line-height: 64px;
     color: #222;
 }
 
-h2{
+h2 {
     font-size: 46px;
     line-height: 54px;
     color: #222;
 }
 
-h4{
+h4 {
     font-size: 20px;
     color: #222;
 }
 
-h6{
+h6 {
     font-size: 12px;
     font-weight: 700;
 }
 
-p{
+p {
     font-size: 16px;
     color: #465b52;
     margin: 15px 0 20px 0;
 }
 
-.section-p1{
-    padding: 40px 80px ;
+.section-p1 {
+    padding: 40px 80px;
 }
 
-.section-m1{
+.section-m1 {
     margin: 40px 0;
 }
 
-body{
+body {
     width: 100%;
 }
 
 /* Styling the navigation section  */
 
-#header{
+#header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -76,19 +81,19 @@ body{
     left: 0;
 }
 
-#navbar{
+#navbar {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#navbar li{
+#navbar li {
     list-style: none;
     padding: 0 20px;
     position: relative;
 }
 
-#navbar li a{
+#navbar li a {
     text-decoration: none;
     font-size: 16px;
     font-weight: 520;
@@ -105,17 +110,15 @@ and the effect that shows we're in a particular page
 */
 
 #navbar li a:hover,
-#navbar li a.active
-{
+#navbar li a.active {
     color: #088178;
-} 
+}
 
 /* underline effect when we hover over our li */
 
 
 #navbar li a.active::after,
-#navbar li a:hover::after
-{
+#navbar li a:hover::after {
     content: "";
     width: 30%;
     height: 2px;
@@ -127,7 +130,7 @@ and the effect that shows we're in a particular page
 
 /* Done with the navigation: styling the home page */
 
-#hero{
+#hero {
     background-image: url(../img/bannerBg2.jpg);
     height: 90vh;
     width: 100%;
@@ -141,20 +144,20 @@ and the effect that shows we're in a particular page
 }
 
 /* Adding some colors to our text on screen  */
-#hero h4{
+#hero h4 {
     padding-bottom: 15px;
 }
 
-#hero h2{
+#hero h2 {
     font-weight: 600;
 }
 
-#hero h1{
+#hero h1 {
     color: #088178;
     font-weight: 900;
 }
 
-#hero button{
+#hero button {
     background-image: url(../img/bannerButton.jpg);
     background-color: transparent;
     color: #088178;
@@ -168,16 +171,18 @@ and the effect that shows we're in a particular page
 
 
 /* Styling the review sections  */
-.review{
+.review {
     margin-top: 10rem;
 }
-.review .heading h2{
+
+.review .heading h2 {
     text-align: center;
     font-size: 2.1rem;
     padding: 2rem 0;
     padding-bottom: 3rem;
     font-size: 2.2rem;
 }
+
 .review .review-slider {
     padding: 1rem;
 }
@@ -225,66 +230,268 @@ and the effect that shows we're in a particular page
 
 /* Styling the familar section  */
 
-#familiar{
-   margin-top:  10rem;
+#familiar {
+    margin-top: 10rem;
 }
 
-#familiar .col-md-6 h6{
+#familiar .col-md-6 h6 {
     font-weight: 750;
     font-size: 0.8rem;
 }
 
-#familiar .col-md-6 h2{
+#familiar .col-md-6 h2 {
     font-weight: 750;
 }
 
-#familiar .col-md-6 .knowJay{
+#familiar .col-md-6 .knowJay {
     margin-top: 5rem;
 }
 
-#familiar .col-md-6 .knowJay i{
+#familiar .col-md-6 .knowJay i {
     color: #088178;
     font-size: 1.2rem;
 }
 
 /* Styling the experience section  */
 
-#experience{
+#experience {
     margin-top: 10rem;
 }
 
-#experience .col-md-6 h6{
+#experience .col-md-6 h6 {
     font-weight: 750;
     font-size: 0.8rem;
 }
 
-#experience .col-md-6 h2{
+#experience .col-md-6 h2 {
     font-weight: 750;
 }
 
-#experience .col-md-6 .jayWork{
+#experience .col-md-6 .jayWork {
     margin-top: 3rem;
 }
 
-#experience .col-md-6 .jayWork h4{
+#experience .col-md-6 .jayWork h4 {
     font-weight: bolder;
-    
+
 }
 
 /* Styling the brand section  */
 
-#fewBrands{
+#fewBrands {
     margin-top: 10rem;
 }
 
 /* styling the brand talk */
 
 
-#fewBrands  .brandTalk h1{
+#fewBrands .brandTalk h1 {
     text-align: center;
     font-weight: 900;
 }
 
-#fewBrands  .brandTalk h1 span{
+#fewBrands .brandTalk h1 span {
     color: #088178;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 991px) {
+    html {
+        font-size: 55%;
+    }
+
+    #header {
+        padding: 2rem;
+        width: 100%;
+    }
+
+    section {
+        padding: 2rem;
+    }
+
+   
+}
+
+
+@media (max-width: 768px) {
+    #header {
+        padding: 2rem;
+        width: 100%;
+    }
+
+    #fewBrands .brandTalk h1 {
+        font-size: 4.2rem;
+    }
+
+    #fewBrands .container .col-md-3 img {
+        padding: 2rem;
+        height: 22.4rem;
+        width: 100%;
+    }
+    #hero {
+        height: 90vh;
+        width: 100%;
+        background-position: top 25% right 0%;
+        background-size: cover;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    #hero h6{
+        padding: 2rem;
+        
+    }
+    #hero h1{
+        padding: 2rem;
+        line-height: 6.5rem;
+        font-size: 4.8rem;
+    }
+    #hero h2{
+        padding: 2rem;
+        line-height: 5.0rem;
+        font-size: 4.1rem;
+    }
+    #hero p{
+        padding: 2rem;
+    }
+
+}
+
+@media(max-width: 450px) {
+    #header {
+        padding: 1rem;
+        width: 100%;
+    }
+
+    html {
+        font-size: 50%;
+    }
+
+    .heading h2 {
+        font-size: 2.5rem;
+    }
+
+    #fewBrands .brandTalk {
+
+        text-align: center;
+    }
+
+    #fewBrands .brandTalk h1 {
+        font-size: 4.2rem;
+    }
+
+    #fewBrands .container .col-md-3 img {
+        padding: 5rem;
+        height: 23rem;
+    }
+
+    #experience .col-md-6 h2 {
+        font-size: 5.2rem;
+    }
+
+    #experience .container .col-md-6 h6 {
+        font-size: 1.5rem;
+    }
+
+    #experience .container .col-md-6 h4 {
+        font-size: 2.0rem;
+        font-weight: 500;
+    }
+
+    #experience .container .col-md-6 p {
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
+
+    #familiar .col-md-6 h2 {
+        font-size: 5.2rem;
+    }
+
+    #familiar .container .col-md-6 h6 {
+        font-size: 1.5rem;
+    }
+
+    #familiar .container .col-md-6 h4 {
+        font-size: 2.0rem;
+        font-weight: 500;
+    }
+
+    #familiar .container .col-md-6 p {
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
 }
