--- a/css/styles.css
+++ b/css/styles.css
@@ -493,12 +493,185 @@ and the effect that shows we're in a particular page
 
 
 /* Styling the Services  */
+/* .cart h1{
+    width: 3%;
+    position: relative;
+    top: 60px;
+    left: 90%;
+    cursor: pointer;
+}
+
+.cart h1 i{
+    cursor: pointer;
+    padding: 5px;
+    background: red;
+    border: none;
+    outline: none;
+    font-weight: bold;
+    color: #fafafa;
+}
+
+.cart h1:before{
+    content: attr(data-count);
+    position: absolute;
+    color: white;
+    right: 16px;
+    font-size: 15px;
+    text-align: center;
+    top: -12px;
+    width: 20px;
+    height: 20px;
+    background: red;
+    border-radius: 50%;
+    opacity: 0;
+}
+
+#cart{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: space-around;
+    margin: 100px auto;
+}
+
+#cart div{
+    width: 22%;
+    height: 93%;
+    background: #f5f5f5;
+    padding: 1%;
+    position: relative;
+} */
+
+
+/* Styling the cart icon  */
+
+#cart-icon {
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
+.cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 360px;
+    min-height: 100vh;
+    padding: 20px;
+    background: #fff;
+    box-shadow: -2px 0 4px hsl(0, 4%, 15% / 100%);
+    transition: 0.3s;
+}
+.cart.active{
+    right: 0;
+}
+
+.cart-title {
+    text-align: center;
+    font-size: 1.9rem;
+    font-weight: 600;
+    margin-top: 2rem;
+}
+
+.cart-box {
+    /* this works for all image sizes
+*/
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.cart-img {
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+    padding: 10px;
+}
+
+.detail-box {
+    display: grid;
+    row-gap: 0.5rem;
+}
+
+.cart-product-title {
+    font-size: 1rem;
+    text-transform: capitalize;
+}
+
+.cart-price {
+    font-weight: 600;
+}
+
+.cart-quantity {
+    border: 1px solid var(--black);
+    outline-color: var(--light-color);
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.cart-remove {
+    font-size: 24px;
+    color: var(--orange);
+    cursor: pointer;
+}
+
+.total {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid var(--black);
+}
+
+.total-title {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.total-price {
+    margin-left: 0.5rem;
+}
+
+.btn-buy {
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    border: none;
+    background: var(--orange);
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+
+}
+.btn-buy:hover{
+    background: var(--black);
+}
+#close-cart{
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
+    font-size: 2rem;
+    color: var(--black);
+    cursor: pointer;
+}
+
+.add-cart {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: #fff;
+    color: var(--black);
+    padding: 10px;
+    cursor: pointer;
+}
 
 .products {
     margin-top: 5rem;
 }
 
-.products img{
+.products img {
     margin-top: 4rem;
 }
 
@@ -760,9 +933,10 @@ and the effect that shows we're in a particular page
 
 
     /* In Product.html  */
-    .products .col-md-3 img{
+    .products .col-md-3 img {
         margin-top: 3rem;
     }
+
     .productTalk h6 {
         font-size: 1.8rem;
     }
