--- a/css/styles.css
+++ b/css/styles.css
@@ -552,8 +552,8 @@ and the effect that shows we're in a particular page
 
 .cart {
     position: fixed;
-    top: 0;
-    right: -100%;
+    top: 0; 
+    right: 0;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
@@ -561,6 +561,7 @@ and the effect that shows we're in a particular page
     box-shadow: -2px 0 4px hsl(0, 4%, 15% / 100%);
     transition: 0.3s;
 }
+
 .cart.active{
     right: 0;
 }
